# ocaml-emoji

./: README.md
src/: dune  emoji-test.txt  gencode.ml  updatelist.ml
