(executable
 (name gencode)
 (modules gencode)
 (libraries uutf))

(library
 (modules emoji)
 (public_name emoji))

(executable
 (name updatelist)
 (modules updatelist)
 (libraries lwt cohttp-lwt-unix))

(rule
 (target emoji-test.txt)
 (deps updatelist.exe)
 (mode promote)
 (action
  (with-stdout-to
   emoji-test.txt
   (run ./updatelist.exe))))

(rule
 (target emoji.ml)
 (deps gencode.exe emoji-test.txt)
 (action
  (with-stdout-to
   emoji.ml
   (run ./gencode.exe))))
